syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zl.skypointer.apm.network.proto";

message KeyWithIntegerValue {
    string key = 1;
    int32 value = 2;
}
